[package]
name = "fips-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
keccak = "0.1"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
cipher = "0.4"
sha1 = "0.10"
cmac = "0.7"
des = "0.8"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p521 = { version = "0.13", features = ["ecdsa"] }
p224 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
signature = "2"
ed25519-dalek = { version = "2", features = ["rand_core", "digest"] }
rsa = "0.9"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
openssl = "0.10"
fips203 = "0.4"
fips204 = "0.4"
